<resources>
    <string name="app_name">BluetoothConnectionMonitor</string>
    <string name="dismiss_button">Dismiss</string>
    <string name="connection_lost">ALERT: Connection lost !!!</string>
    <string name="title_activity_bluetooth_connect">BluetoothConnect</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Bluetooth connection setup: step #%1$d</string>
    <string name="action_quit">Quit</string>
    <string name="row_item_icon">Row item icon</string>
    <string name="action_restart_scan">Restart devices scan</string>
    <string name="action_stop_scan">Stop devices scan</string>
    <string name="title_activity_bluetooth_client_server">BluetoothClientServer</string>
    <string name="client_button">Ping Device</string>
    <string name="server_button">Launch Server</string>
    <string name="title_activity_bluetooth_monitor_settings">Settings</string>
    <string-array name="states_names">
        <item>Init</item>
        <item>Connecting</item>
        <item>Connected</item>
        <item>Requested</item>
        <item>Acknowledged</item>
        <item>Failure</item>
        <item>ALARM !!!</item>
        <item>Stopped</item>
        <item>Listening</item>
    </string-array>
    <!-- Strings related to Settings -->
    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync"><![CDATA[Data & Sync]]></string>
    <string name="pref_title_ping_frequency">Ping Frequency</string>
    <string-array name="pref_ping_frequency_titles">
        <item>10 Hz</item>
        <item>5 Hz</item>
        <item>2 Hz</item>
        <item>1 Hz</item>
        <item>0.5 Hz</item>
        <item>0.2 Hz</item>
        <item>0.1 Hz</item>
    </string-array>
    <string-array name="pref_ping_frequency_values">
        <item>100</item>
        <item>200</item>
        <item>500</item>
        <item>1000</item>
        <item>2000</item>
        <item>5000</item>
        <item>10000</item>
    </string-array>
    <string name="pref_title_ping_timeout">Ping Timeout</string>
    <string-array name="pref_ping_timeout_titles">
        <item>250 ms</item>
        <item>500 ms</item>
        <item>1 s</item>
        <item>2 s</item>
    </string-array>
    <string-array name="pref_ping_timeout_values">
        <item>250</item>
        <item>500</item>
        <item>1000</item>
        <item>2000</item>
    </string-array>
    <string name="pref_title_ping_failure_number">Ping Failure Number</string>
    <string-array name="pref_ping_failure_number_titles">
        <item>3</item>
        <item>5</item>
        <item>10</item>
        <item>20</item>
    </string-array>
    <string-array name="pref_ping_failure_number_values">
        <item>3</item>
        <item>5</item>
        <item>10</item>
        <item>20</item>
    </string-array>
    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="action_launch_server">Launch Server</string>
    <string name="action_display_infos">Display Device Infos</string>
    <string name="action_launch_client">Ping this Device</string>
    <string name="launching_server">Launching Ping Server …</string>
    <string name="launching_client">Launching Ping Client …</string>
    <string name="unexpected_msg_received">Unexpected message received: %1$d\\n</string>
    <string name="accept_thread_started">Accept Thread Started</string>
    <string name="accept_thread_accepting_data">Accept Thread accepting data …</string>
    <string name="accept_thread_data_received">Accept Thread: data received</string>
    <string name="accept_thread_io_exception">Accept Thread: I/O Exception</string>
    <string name="connect_thread_started">Connect Thread Started </string>
    <string name="connect_thread_connecting">Connect Thread: Connecting …</string>
    <string name="connect_thread_connection_succeed">Connect Thread: Connection Succeed</string>
    <string name="connect_thread_io_exception">Connect Thread: I/O Exception</string>
    <string name="connected_thread_started">Connected Thread: Started</string>
    <string name="connected_thread_data_acknowledge">Connected Thread: Ping Response Received</string>
    <string name="connected_thread_invalid_data_received">Connected Thread: Invalid Ping Response</string>
    <string name="connected_thread_io_exception">Connected Thread: I/O Exception</string>
    <string name="ping_thread_send_request">Ping Thread: Sending Ping Request</string>
    <string name="starting">Bluetooth Client/Server Activity starting …</string>
    <string name="alarm_image">Alarm image</string>
    <string name="no_bluetooth_device">No bluetooth device</string>
    <string name="bytes_of_data_sent">%1$d bytes of data sent: \'%2$s\'</string>
    <string name="bytes_of_data_received">%1$d bytes of data received: \'%2$s\'</string>
    <string name="state_message_format"><![CDATA[[%1$04d] <%2$s> %3$s\n]]></string>
    <string name="state_error_format"><![CDATA[>****< <%1$s> %2$s\n]]></string>
    <string name="unknown_device">Unknown Device</string>
    <string name="local_server">Local Ping Server</string>
    <string name="title_pref_include_known_devices">Include Known Bluetooth Devices</string>
    <string name="alarm_launched">Alarm Launched</string>
    <string name="connected_thread_data_received">Data received</string>
    <string name="accept_thread_timeout">Accept Thread: Timeout Waiting For Data</string>
    <string name="connected_thread_data_timeout">Connected Thread: Timeout While Receiving Data</string>
    <string name="ping_request_min_char_number">Ping Request Minimum Size</string>
    <string name="ping_request_max_char_number">Ping Request Maximum Size</string>
    <string name="title_activity_timeout_test">TimeoutTestActivity</string>
    <string name="title_pref_enforce_state_changes">Enforce State Machine States Changes</string>
</resources>
