<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.rcsnet.bluetoothmonitor.BluetoothConnect">
    <item
        android:id="@+id/action_launch_server"
        android:orderInCategory="10"
        android:title="@string/action_launch_server"
        app:showAsAction="withText" />
    <item
        android:id="@+id/action_restart_scan"
        android:orderInCategory="100"
        android:title="@string/action_restart_scan"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_stop_scan"
        android:orderInCategory="100"
        android:title="@string/action_stop_scan"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="150"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_quit"
        android:orderInCategory="200"
        android:title="@string/action_quit"
        app:showAsAction="never" />
</menu>
