<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="1000"
        android:entries="@array/pref_ping_frequency_titles"
        android:entryValues="@array/pref_ping_frequency_values"
        android:key="ping_frequency"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_ping_frequency" />

    <ListPreference
        android:defaultValue="1000"
        android:entries="@array/pref_ping_timeout_titles"
        android:entryValues="@array/pref_ping_timeout_values"
        android:key="ping_timeout"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_ping_timeout" />

    <ListPreference
        android:defaultValue="3"
        android:entries="@array/pref_ping_failure_number_titles"
        android:entryValues="@array/pref_ping_failure_number_values"
        android:key="ping_failure_number"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_ping_failure_number" />
</PreferenceScreen>
